[package]
name = "holidayfyi"
version = "0.1.0"
edition = "2021"
authors = ["FYIPedia"]
description = "Holiday dates, Easter calculation, and 200+ country calendars — async API client for holidayfyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/holidayfyi-rs"
homepage = "https://holidayfyi.com"
documentation = "https://docs.rs/holidayfyi"
readme = "README.md"
keywords = ["holiday", "calendar", "easter", "public-holiday", "date"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
